# propagate

./: .gitignore  .last-message.txt  CLAUDE.md  README.md  conftest.py  propagate.py  pyproject.toml  requirements.txt
config/: .gitignore  agent-pr-workflow.yaml  pdfdancer-complete-workflow.yaml  pdfdancer-website-suggestions.yaml  propagate.yaml  request-indexing.yaml  seo-automation.yaml  seo-track-and-index.yaml  test.yaml  test2.yaml
deploy/: install.sh  propagate-serve.service  propagate-telegram.service  propagate-webhook.service  propagate.target
docs/: BOOTSTRAPPING.md  CONFIG_REFERENCE.md  DEPLOYMENT.md  GIT.md  IDEA.md  INTERRUPT.md  LOGO_DESIGN_BRIEF.md  MCP.md  SECURITY_AUDIT.md  SEO_FEEDBACK_LOOP.md  SERVE.md  SHELL.md  SIGNALS.md  TELEGRAM.md  WEBHOOK.md  context-bag-stage-2-design.md  feature-gap-analysis.md  git-automation-stage-4-design.md  hooks-and-context-sources-stage-3-design.md  multi-repo-and-dag-stage-6-design.md  signals-and-propagation-stage-5-design.md
propagate_app/: __init__.py  cli.py  config_agent.py  config_executions.py  config_git.py  config_includes.py  config_load.py  config_signals.py  constants.py  context_refs.py  context_sources.py  context_store.py  coordinator.py  entry_signal_queue.py  errors.py  event_format.py  execution_flow.py  git_publish.py  git_repo.py  git_runtime.py  git_templates.py  graph.py  interactive.py  log_buffer.py  message_parser.py  models.py  processes.py  prompts.py  repo_clone.py  routing.py  run_state.py  scheduler.py  serve.py  shell.py  signal_context.py  signal_reconcile.py  signal_transport.py  signals.py  sub_tasks.py  temp_files.py  (+3 more)
propagate_mcp/: cli.py  server.py
propagate_telegram/: bot.py  cli.py  message_parser.py
propagate_webhook/: cli.py  github_events.py  server.py
scripts/: propagate-prod-setup.py  propagate-setup.py  smee-parse-repos.py  smee-setup.sh  smee-start.sh  smee-teardown.sh  start.sh
tests/: conftest.py  test_branch_name_key.py  test_clear.py  test_clone_dir.py  test_clone_token_auth.py  test_config_includes.py  test_context_delete.py  test_context_namespacing.py  test_context_set_stdin.py  test_coordinator.py  (+73 more)
(+157 files in other folders)
