[project]
name = "propagate"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
propagate = "propagate_app.cli:main"

[tool.setuptools.packages.find]
include = ["propagate_app*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
